--- a/code/SparkScalaCourse/.settings/org.scala-ide.sdt.core.prefs
+++ b/code/SparkScalaCourse/.settings/org.scala-ide.sdt.core.prefs
@@ -26,10 +26,11 @@ g=vars
 no-specialization=false
 nowarn=false
 optimise=false
-recompileOnMacroDef=true
+recompileOnMacroDef=false
 relationsDebug=false
-scala.compiler.additionalParams=
-scala.compiler.installation=-856171799
+scala.compiler.additionalParams=\ -Xsource\:2.11 -Ymacro-expand\:none
+scala.compiler.installation=2.11
+scala.compiler.sourceLevel=2.11
 scala.compiler.useProjectSettings=true
 src=main
 stopBuildOnError=true
